fix: try and get haru and aki to play nice on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@
 }
 
 @theme {
-  --breakpoint-xs: 30rem;
+  --breakpoint-xs: 375px;
   /* --color-brand-white: #f9f9f9; */
   --color-brand-white: hsl(255, 40%, 98%);
   --color-brand-purple: #8a7cc8;
